added second page

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
   <header>
     <nav>
-      <img id="cba" src="Images/cba_png.png" >
+      <!-- <img id="cba" src="Images/cba_png.png" > -->
       <h1 id="headerTitle">EXCLUSIONS</h1>
 
       <ul class="topnav" id="myTopnav">
         <li><a href="#home">Insights</a></li>
-        <li><a href="#confluence">Confluence</a></li>
+        <li><a href="index_2ndPage.html">Lotto</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#about">About</a></li>
         <li class="icon">
@@ -115,6 +115,14 @@
           <div class="col-sm-3" id="col4">
             <h3><font style="font-size:24px; color:red; font-weight:bold;">4 &#x2192</font> Combination You Selected</h3><br>          
             <button id="submit">SUBMIT</button><br>
+
+              <div class="alert-grey">
+                <div class="alert-box">
+                  <p>Please Select All 3 Criteria</p>
+                  <button class="button alert-ok">OK</button>
+                </div>
+              </div>
+
             <button id="reset">RESET</button><br>           
             <div id="log"></div>
           </div>
@@ -122,21 +130,16 @@
   </div>
 
   <div class="container-fluid">
+
+
     <div class="row">
-          <div class="col-sm-6" id="row2col1">
-<!--             <mark>
-            <h3>Communication Type Exclusions</h3> select * from <b>pvdata.DM_OPT_OUT</b> <br><br><a href="#">porttitor</a> varius, magna nibh posuere purus';
-            </mark>    -->       
-          </div>
-          <div class="col-sm-6" id="row2col2">
-<!--             <mark>
-            <h3>Portfolio & Channel Exclusions</h3> select * from <b>pvdata.EDM_OPT_OUT</b> <br><br>dolor sit amet, consectetur adipiscing elit. Duis feugiat, purus non <a href="#">porttitor</a> varius, magna nibh posuere purus'; 
-            </mark>   -->      
+          <div class="col-sm-12" id="row2col1">
+    
           </div>
     </div>
   </div>
 
-  <footer>
+<!--   <footer>
       <ul>
         <li><a href="#"><img src="images/twitter.png" alt="Twitter logo"></a></li>
         <li><a href="#"><img src="images/facebook.png" alt="Facebook logo"></a></li>
@@ -145,7 +148,7 @@
       </ul>
 
       <p class="copyright">Copyright 2016. CBA</p>
-  </footer>
+  </footer> -->
 
   <script>
   /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
