--- a/index_2ndPage.html
+++ b/index_2ndPage.html
@@ -56,12 +56,12 @@
 
   <div class="container yy">
     <div class="row zz">
-      <div class="col-sm-2 numberCircle num1" id="div1"></div>
-      <div class="col-sm-2 numberCircle num2" id="div2"></div>
-      <div class="col-sm-2 numberCircle num3" id="div3"></div>
-      <div class="col-sm-2 numberCircle num4" id="div4"></div>    
-      <div class="col-sm-2 numberCircle num5" id="div5"></div>
-      <div class="col-sm-2 numberCircle num6" id="div6"></div>
+      <div class="col-sm-2 numberCircle" id="div1"><div class='numberCircle_ num1'>0</div></div>
+      <div class="col-sm-2 numberCircle" id="div2"><div class='numberCircle_ num2'>0</div></div>
+      <div class="col-sm-2 numberCircle" id="div3"><div class='numberCircle_ num3'>0</div></div>
+      <div class="col-sm-2 numberCircle" id="div4"><div class='numberCircle_ num4'>0</div></div>    
+      <div class="col-sm-2 numberCircle" id="div5"><div class='numberCircle_ num5'>0</div></div>
+      <div class="col-sm-2 numberCircle" id="div6"><div class='numberCircle_ num6'>0</div></div>
     </div>
   </div>
  
